<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="40dp"
    app:cardElevation="10dp"
    app:strokeColor="@color/less_blue"
    app:strokeWidth="8dp">

    <ImageView
        android:id="@+id/teacherPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/teacherFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <TextView
        android:id="@+id/departmentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/department_name"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <RatingBar
        android:id="@+id/teacherRatingBar"
        style="@android:style/Widget.Material.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:max="5" />

    <TextView
        android:id="@+id/teacherAvgRating"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginStart="310dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/circle_button_dark_blue"
        android:fontFamily="@font/comfortaa"
        android:textAlignment="center"
        android:text="@string/zero_stars"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/teacherRatingBar"
        app:layout_constraintTop_toBottomOf="@+id/departmentName" />
</com.google.android.material.card.MaterialCardView>