<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_schedule_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="200dp"
    android:theme="@style/Theme.MaterialComponents.Light">

    <RelativeLayout
        android:id="@+id/search_direction_popup"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/ic_rounded_layout_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/agree"
            style="@style/SearchInMapButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/comfortaa"
            android:text="@string/agree"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="12dp" />


        <EditText
            android:id="@+id/editGroup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_above="@+id/editLogin"
            android:layout_alignParentStart="true"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_border_white"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/group"
            android:paddingStart="10dp"
            android:textStyle="bold"
            app:hintTextColor="@color/dark_blue"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_above="@+id/agree"
            android:layout_alignParentStart="true"
            android:layout_marginStart="34dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_border_white"
            android:paddingStart="10dp"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:textStyle="bold"

            app:hintTextColor="@color/dark_blue"
            tools:ignore="RtlSymmetry" />


    </RelativeLayout>

</LinearLayout>